--- a/slides/index.html
+++ b/slides/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
 
-    <script src="js/remark-latest.min.js" type="text/javascript">
-    </script>
+    <script src="js/remark-latest.min.js" type="text/javascript"></script>
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script type="text/javascript">
       var slideshow = remark.create({
         sourceUrl: "content/index.md",
