--- a/slides/index.html
+++ b/slides/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Advanced Webpack</title>
+    <title>Universal Apps Lessons from the Trenches</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="css/fonts.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
